--- a/DDDLessons001/DDDservice/pom.xml
+++ b/DDDLessons001/DDDservice/pom.xml
@@ -20,6 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <skipTests>true</skipTests>
         <mysql.version>6.0.6</mysql.version>
+        <liquibase.version>3.5.3</liquibase.version>
     </properties>
 
     <dependencies>
@@ -66,15 +67,23 @@
             <artifactId>telegrambots-meta</artifactId>
             <version>RELEASE</version>
         </dependency>
+
         <dependency>
             <groupId>DDDLessons001</groupId>
             <artifactId>policy</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
         <dependency>
             <groupId>DDDLessons001</groupId>
             <artifactId>db-api</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>${liquibase.version}</version>
         </dependency>
 
     </dependencies>
@@ -83,6 +92,22 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>3.5.3</version>
+                <configuration>
+                    <propertyFile>${basedir}/src/main/resources/liquibase.properties</propertyFile>
+                    <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>update</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
