--- a/DDDLessons001/DDDservice/pom.xml
+++ b/DDDLessons001/DDDservice/pom.xml
@@ -96,7 +96,7 @@
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
-                <version>3.5.3</version>
+                <version>${liquibase.version}</version>
                 <configuration>
                     <propertyFile>${basedir}/src/main/resources/liquibase.properties</propertyFile>
                     <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
