--- a/DDDLessons001/DDDservice/src/main/resources/liquibase.properties
+++ b/DDDLessons001/DDDservice/src/main/resources/liquibase.properties
@@ -1,6 +1,6 @@
 changeLogFile: src/main/resources/dbschema/master.xml
 driver: com.mysql.cj.jdbc.Driver
-url: jdbc:mysql://localhost:3306/DDDLesson?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+url: jdbc:mysql://localhost:3306/DDDLesson?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&nullNamePatternMatchesAll=true
 username: root
 password: root
 verbose: true 
